--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.14.0",
+        "save-dev": "0.0.1-security"
     }
 }
